[BUG] The livestock list become too long and goes outside the view

--- a/livestock-tracker/ClientApp/src/styles.scss
+++ b/livestock-tracker/ClientApp/src/styles.scss
@@ -64,6 +64,11 @@ body {
   font-family: Roboto, Arial, sans-serif;
 }
 
+.content {
+  max-height: calc(100vh - 64px);
+  overflow-y: auto;
+}
+
 app-livestock-list {
   display: flex;
   position: relative;
